--- a/src/SerialLoops/Controls/MapCharactersSubEditor.axaml
+++ b/src/SerialLoops/Controls/MapCharactersSubEditor.axaml
@@ -7,8 +7,6 @@
              xmlns:controls="using:SerialLoops.Controls"
              xmlns:models="using:SerialLoops.Models"
              xmlns:utility="using:SerialLoops.Utility"
-             xmlns:items="using:SerialLoops.Lib.Items"
-             xmlns:editors="clr-namespace:SerialLoops.ViewModels.Editors"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:MapCharactersSubEditorViewModel"
              x:Class="SerialLoops.Controls.MapCharactersSubEditor"
@@ -21,18 +19,7 @@
 
         <Grid Grid.Row="1" RowDefinitions="Auto,*" ColumnDefinitions="*" IsVisible="{Binding HasMapCharacters}">
             <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Spacing="10">
-                <ComboBox ItemsSource="{Binding Maps}" SelectedItem="{Binding Map}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate DataType="items:MapItem">
-                            <TextBlock Text="{Binding DisplayName}"/>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                    <ComboBox.ItemContainerTheme>
-                        <ControlTheme TargetType="ComboBoxItem" x:DataType="items:MapItem">
-                            <Setter Property="TextSearch.Text" Value="{Binding DisplayName}" />
-                        </ControlTheme>
-                    </ComboBox.ItemContainerTheme>
-                </ComboBox>
+                <ComboBox ItemsSource="{Binding Maps}" SelectedItem="{Binding Map}"/>
 
                 <Button Content="{x:Static assets:Strings.Refresh_Maps_List}" Command="{Binding RefreshMapsCommand}"/>
             </StackPanel>
@@ -114,18 +101,7 @@
                           IsEnabled="{Binding SelectedMapCharacter, Converter={x:Static ObjectConverters.IsNotNull}}">
                         <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Chibi}"/>
                         <ComboBox Grid.Row="0" Grid.Column="1" Margin="10,0,0,0"
-                                  ItemsSource="{Binding Chibis}" SelectedItem="{Binding SelectedMapCharacter.Chibi}">
-                            <ComboBox.ItemTemplate>
-                                <DataTemplate DataType="items:ChibiItem">
-                                    <TextBlock Text="{Binding DisplayName}"/>
-                                </DataTemplate>
-                            </ComboBox.ItemTemplate>
-                            <ComboBox.ItemContainerTheme>
-                                <ControlTheme TargetType="ComboBoxItem" x:DataType="items:ChibiItem">
-                                    <Setter Property="TextSearch.Text" Value="{Binding DisplayName}" />
-                                </ControlTheme>
-                            </ComboBox.ItemContainerTheme>
-                        </ComboBox>
+                                  ItemsSource="{Binding Chibis}" SelectedItem="{Binding SelectedMapCharacter.Chibi}"/>
 
                         <controls:ChibiDirectionSelector Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                                                          DataContext="{Binding ChibiDirectionSelector}"/>
@@ -134,18 +110,7 @@
                         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Spacing="10" Margin="10,0,0,0">
                             <ComboBox Margin="10,0,0,0"
                                       ItemsSource="{Binding ScriptEditor.ScriptSections}"
-                                      SelectedItem="{Binding SelectedMapCharacter.TalkSection}">
-                                <ComboBox.ItemTemplate>
-                                    <DataTemplate DataType="editors:ReactiveScriptSection">
-                                        <TextBlock Text="{Binding  Name}"/>
-                                    </DataTemplate>
-                                </ComboBox.ItemTemplate>
-                                <ComboBox.ItemContainerTheme>
-                                    <ControlTheme TargetType="ComboBoxItem" x:DataType="editors:ReactiveScriptSection">
-                                        <Setter Property="TextSearch.Text" Value="{Binding Name}" />
-                                    </ControlTheme>
-                                </ComboBox.ItemContainerTheme>
-                            </ComboBox>
+                                      SelectedItem="{Binding SelectedMapCharacter.TalkSection}"/>
 
                             <Button Content="{x:Static assets:Strings.Remove_Talk_Link}" Command="{Binding RemoveTalkLinkCommand}"/>
                         </StackPanel>
