--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/BgmPlayScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/BgmPlayScriptCommandEditorView.axaml
@@ -12,34 +12,12 @@
     <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto">
         <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,7,0,0" Text="{x:Static assets:Strings.Music}"/>
         <StackPanel Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" Orientation="Horizontal" Spacing="5">
-            <ComboBox ItemsSource="{Binding Bgms}" SelectedItem="{Binding Music}">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate DataType="items:BackgroundMusicItem">
-                        <TextBlock Text="{Binding DisplayName}"/>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-                <ComboBox.ItemContainerTheme>
-                    <ControlTheme TargetType="ComboBoxItem" x:DataType="items:BackgroundMusicItem" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
-                        <Setter Property="TextSearch.Text" Value="{Binding BgmName}" />
-                    </ControlTheme>
-                </ComboBox.ItemContainerTheme>
-            </ComboBox>
+            <ComboBox ItemsSource="{Binding Bgms}" SelectedItem="{Binding Music}"/>
             <controls:ItemLink Item="{Binding Music}" Tabs="{Binding Tabs}"/>
         </StackPanel>
 
         <TextBlock Grid.Column="0" Grid.Row="1" Margin="0,7,0,0" Text="{x:Static assets:Strings.Mode}"/>
-        <ComboBox Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" ItemsSource="{Binding Modes}" SelectedItem="{Binding Mode}">
-            <ComboBox.ItemTemplate>
-                <DataTemplate DataType="vm:BgmModeLocalized">
-                    <TextBlock Text="{Binding DisplayString}"/>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-            <ComboBox.ItemContainerTheme>
-                <ControlTheme TargetType="ComboBoxItem" x:DataType="vm:BgmModeLocalized" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
-                    <Setter Property="TextSearch.Text" Value="{Binding DisplayString}" />
-                </ControlTheme>
-            </ComboBox.ItemContainerTheme>
-        </ComboBox>
+        <ComboBox Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" ItemsSource="{Binding Modes}" SelectedItem="{Binding Mode}"/>
 
         <TextBlock Grid.Column="0" Grid.Row="2" Margin="0,7,0,0" Text="{x:Static assets:Strings.Volume}"/>
         <NumericUpDown Grid.Column="1" Grid.Row="2" Margin="10,0,0,0" Value="{Binding Volume}"
