--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/ChibiEnterExitScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/ChibiEnterExitScriptCommandEditorView.axaml
@@ -11,33 +11,11 @@
     <Grid RowDefinitions="Auto,Auto,Auto" ColumnDefinitions="Auto,Auto">
         <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Chibi}"/>
         <ComboBox Grid.Row="0" Grid.Column="1" Margin="10,0,0,0"
-                  ItemsSource="{Binding Chibis}" SelectedItem="{Binding Chibi}">
-            <ComboBox.ItemTemplate>
-                <DataTemplate DataType="items:ChibiItem">
-                    <TextBlock Text="{Binding DisplayName}"/>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-            <ComboBox.ItemContainerTheme>
-                <ControlTheme TargetType="ComboBoxItem" x:DataType="items:ChibiItem">
-                    <Setter Property="TextSearch.Text" Value="{Binding DisplayName}" />
-                </ControlTheme>
-            </ComboBox.ItemContainerTheme>
-        </ComboBox>
+                  ItemsSource="{Binding Chibis}" SelectedItem="{Binding Chibi}"/>
 
         <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Enter_Exit}"/>
         <ComboBox Grid.Row="1" Grid.Column="1" Margin="10,0,0,0"
-                  ItemsSource="{Binding EnterExitModes}" SelectedItem="{Binding EnterExitMode}">
-            <ComboBox.ItemTemplate>
-                <DataTemplate DataType="vm:LocalizedChibiEnterExitType">
-                    <TextBlock Text="{Binding DisplayName}"/>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-            <ComboBox.ItemContainerTheme>
-                <ControlTheme TargetType="ComboBoxItem" x:DataType="vm:LocalizedChibiEnterExitType">
-                    <Setter Property="TextSearch.Text" Value="{Binding DisplayName}" />
-                </ControlTheme>
-            </ComboBox.ItemContainerTheme>
-        </ComboBox>
+                  ItemsSource="{Binding EnterExitModes}" SelectedItem="{Binding EnterExitMode}"/>
 
         <TextBlock Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.Delay__Frames_}"/>
         <NumericUpDown Grid.Row="2" Grid.Column="1" Margin="10,0,0,0"  Value="{Binding Delay}"
