--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/InvestStartScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/InvestStartScriptCommandEditorView.axaml
@@ -4,7 +4,6 @@
              xmlns:vm="using:SerialLoops.ViewModels.Editors.ScriptCommandEditors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:assets="using:SerialLoops.Assets"
-             xmlns:editor="using:SerialLoops.ViewModels.Editors"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:InvestStartScriptCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.InvestStartScriptCommandEditorView">
@@ -27,18 +26,7 @@
 
         <TextBlock Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" Text="{x:Static assets:Strings.End_Script_Section}"/>
         <ComboBox Grid.Row="4" Grid.Column="1" ItemsSource="{Binding ScriptEditor.ScriptSections}" SelectedItem="{Binding EndScriptSection}"
-                  Margin="10,0,0,0">
-            <ComboBox.ItemTemplate>
-                <DataTemplate DataType="editor:ReactiveScriptSection">
-                    <TextBlock Text="{Binding Name}"/>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-            <ComboBox.ItemContainerTheme>
-                <ControlTheme TargetType="ComboBoxItem" x:DataType="editor:ReactiveScriptSection" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
-                    <Setter Property="TextSearch.Text" Value="{Binding Name}" />
-                </ControlTheme>
-            </ComboBox.ItemContainerTheme>
-        </ComboBox>
+                  Margin="10,0,0,0"/>
     </Grid>
 </UserControl>
 
