--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/ModifyFriendshipScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/ModifyFriendshipScriptCommandEditorView.axaml
@@ -10,18 +10,7 @@
     <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="Auto,Auto">
         <TextBlock Grid.Row="0" Grid.Column="0" Text="{x:Static assets:Strings.Character}"/>
         <ComboBox Grid.Row="0" Grid.Column="1" ItemsSource="{Binding Characters}"
-                  Margin="10,0,0,0" SelectedItem="{Binding Character}">
-            <ComboBox.ItemTemplate>
-                <DataTemplate DataType="x:String">
-                    <TextBlock Text="{Binding}"/>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-            <ComboBox.ItemContainerTheme>
-                <ControlTheme TargetType="ComboBoxItem" x:DataType="x:String" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
-                    <Setter Property="TextSearch.Text" Value="{Binding}" />
-                </ControlTheme>
-            </ComboBox.ItemContainerTheme>
-        </ComboBox>
+                  Margin="10,0,0,0" SelectedItem="{Binding Character}"/>
 
         <TextBlock Grid.Row="1" Grid.Column="0" Text="{x:Static assets:Strings.Modify_by}"/>
         <NumericUpDown Grid.Row="1" Grid.Column="1" Margin="10,0,0,0"
