--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/ScreenFadeInScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/ScreenFadeInScriptCommandEditorView.axaml
@@ -21,17 +21,6 @@
         <controls:ScreenSelector Grid.Column="1" Grid.Row="2" Margin="10,0,0,0" DataContext="{Binding ScreenSelector}"/>
 
         <TextBlock Grid.Column="0" Grid.Row="3" Margin="0,7,0,0" Text="{x:Static assets:Strings.Color}"/>
-        <ComboBox Grid.Column="1" Grid.Row="3" Margin="10,0,0,0" ItemsSource="{Binding Colors}" SelectedItem="{Binding Color}">
-            <ComboBox.ItemTemplate>
-                <DataTemplate DataType="vm:ColorMonochromeLocalized">
-                    <TextBlock Text="{Binding DisplayText}"/>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-            <ComboBox.ItemContainerTheme>
-                <ControlTheme TargetType="ComboBoxItem" x:DataType="vm:ColorMonochromeLocalized" BasedOn="{StaticResource {x:Type ComboBoxItem}}">
-                    <Setter Property="TextSearch.Text" Value="{Binding DisplayText}" />
-                </ControlTheme>
-            </ComboBox.ItemContainerTheme>
-        </ComboBox>
+        <ComboBox Grid.Column="1" Grid.Row="3" Margin="10,0,0,0" ItemsSource="{Binding Colors}" SelectedItem="{Binding Color}"/>
     </Grid>
 </UserControl>
