--- a/src/SerialLoops/Views/Editors/ScriptCommandEditors/TopicGetScriptCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptCommandEditors/TopicGetScriptCommandEditorView.axaml
@@ -5,7 +5,6 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:assets="using:SerialLoops.Assets"
              xmlns:controls="using:SerialLoops.Controls"
-             xmlns:items="clr-namespace:SerialLoops.Lib.Items;assembly=SerialLoops.Lib"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:TopicGetScriptCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptCommandEditors.TopicGetScriptCommandEditorView">
@@ -16,13 +15,7 @@
             <Button Content="{x:Static assets:Strings.Select_a_Topic}" Command="{Binding SelectTopicCommand}"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" Orientation="Horizontal" Spacing="5" IsVisible="{Binding SelectedTopic, Converter={x:Static ObjectConverters.IsNotNull}}">
-            <ComboBox ItemsSource="{Binding Topics}" SelectedItem="{Binding SelectedTopic}">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate DataType="items:TopicItem">
-                        <TextBlock Text="{Binding DisplayName}"/>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
+            <ComboBox ItemsSource="{Binding Topics}" SelectedItem="{Binding SelectedTopic}"/>
             <controls:ItemLink Item="{Binding SelectedTopic}" Tabs="{Binding Tabs}"/>
         </StackPanel>
     </Grid>
